src/pages/apps/_styles/index.module.scss
.content {
	display: grid;
	gap: .5rem;
	padding: 0;
	list-style: none;
	grid-template-columns: repeat(auto-fill, minmax(7.75rem, 1fr));

	& img {
		width: 3rem;
	}

	& a {
		--color: rgb(var(--br-theme-color-accent));

		background-color: rgb(var(--br-theme-color-surface)) !important;
		border: 1px solid rgba(var(--br-theme-color-on-surface), .08);
		padding: .75rem;
		flex-direction: column;
		text-align: center;
		justify-content: center;
		text-transform: capitalize;
		position: relative;
		width: 100%;
		transition-property: scale;
		transition-duration: var(--br-theme-duration-transition);

		&::after {
			display: block;
			content: '';
			position: absolute;
			width: calc(100% + 0.5rem);
			height: calc(100% + 0.5rem);
			opacity: 0;
			border: 2px solid var(--color);
			left: -0.375rem;
			top: -0.375rem;
			border-radius: .5rem;
			pointer-events: none;
		}

		&:focus-visible {
			outline: none;

			&::after {
				opacity: 1;
			}
		}

		&:hover {
			&::after {
				opacity: 1;
			}
		}

		&:active {
			scale: .9;

			&::after {
				opacity: 1;
			}
		}

		> span {
			text-overflow: ellipsis;
			overflow: hidden;
			white-space: nowrap;
			max-width: 100%;
		}
	}
}

.main {
	background-color: rgb(var(--br-theme-color-background));
	padding: 1rem;
	max-width: 100%;
	padding-top: 4rem;
	width: 100%;
	display: flex;
	min-height: 100dvh;
	flex-direction: column;
	align-items: center;

	> div {
		width: 67.5rem;
		max-width: 100%;
	}

	& h1 {
		font-size: max(min(3.5rem, 10dvw), 2rem);
		font-weight: normal;
	}

	& input {
		width: 360px !important;
		max-width: 100%;
		margin: 1rem 0;
	}
}

